Fix requests alignment

--- a/src/requests/Request/Request.css
+++ b/src/requests/Request/Request.css
@@ -43,8 +43,13 @@
 }
 
 :local(.icon) {
-  height: 30px;
   align-self: center;
   margin-left: 5px;
   margin-right: 20px;
+  min-width: 30px;
+  text-align: center;
+
+  img {
+    height: 30px;
+  }
 }
